@@ -1,7 +1,7 @@
 package de.tum.in.www1.artemis.domain;
 
 import java.io.Serializable;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.time.ZonedDateTime;
 
 import javax.persistence.*;
@@ -127,12 +127,12 @@ public class Attachment extends DomainObject implements Serializable {
     private void handleFileChange() {
         if (attachmentType == AttachmentType.FILE && getLecture() != null) {
             // move file and delete old file if necessary
-            var targetFolder = Paths.get(FilePathService.getLectureAttachmentFilePath(), getLecture().getId().toString()).toString();
+            var targetFolder = Path.of(FilePathService.getLectureAttachmentFilePath(), getLecture().getId().toString()).toString();
             link = fileService.manageFilesForUpdatedFilePath(prevLink, link, targetFolder, getLecture().getId(), true);
         }
         else if (attachmentType == AttachmentType.FILE && getAttachmentUnit() != null) {
             // move file and delete old file if necessary
-            var targetFolder = Paths.get(FilePathService.getAttachmentUnitFilePath(), getAttachmentUnit().getId().toString()).toString();
+            var targetFolder = Path.of(FilePathService.getAttachmentUnitFilePath(), getAttachmentUnit().getId().toString()).toString();
             link = fileService.manageFilesForUpdatedFilePath(prevLink, link, targetFolder, getAttachmentUnit().getId(), true);
         }
     }
@@ -145,12 +145,12 @@ public class Attachment extends DomainObject implements Serializable {
     public void onDelete() {
         if (attachmentType == AttachmentType.FILE && getLecture() != null) {
             // delete old file if necessary
-            var targetFolder = Paths.get(FilePathService.getLectureAttachmentFilePath(), getLecture().getId().toString()).toString();
+            var targetFolder = Path.of(FilePathService.getLectureAttachmentFilePath(), getLecture().getId().toString()).toString();
             fileService.manageFilesForUpdatedFilePath(prevLink, null, targetFolder, getLecture().getId(), true);
         }
         else if (attachmentType == AttachmentType.FILE && getAttachmentUnit() != null) {
             // delete old file if necessary
-            var targetFolder = Paths.get(FilePathService.getAttachmentUnitFilePath(), getAttachmentUnit().getId().toString()).toString();
+            var targetFolder = Path.of(FilePathService.getAttachmentUnitFilePath(), getAttachmentUnit().getId().toString()).toString();
             fileService.manageFilesForUpdatedFilePath(prevLink, null, targetFolder, getAttachmentUnit().getId(), true);
         }
     }
